UIP-2266 changed unit input to not wrap when screen is resized to small
Change-Id: I8067266181dfea00b6619c2c947d99a89ff0b8bb

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -2589,6 +2589,7 @@ input[type=file] {
 
     // UnitInput Component
     &.unit-input {
+        white-space: nowrap;
         .input-custom-select {
             padding-top: 0;
             padding-bottom: 0;
