UIP-2262 changed alert icon color to white
Change-Id: I39f9643d7e78e69ff2fbcc6fa4beb90d7dc0f030

--- a/packages/ui-library/src/css/details-tooltip.scss
+++ b/packages/ui-library/src/css/details-tooltip.scss
@@ -236,7 +236,7 @@
                     font-family: $icon-font;
                     font-size: 22px;
                     text-align: center;
-                    color: $color-warning-text;
+                    color: $color-white;
                 }
                 .details-body {
                     border-top: $title-height solid $color-warning-icon-yellow;
