UIP-2251 added line-chart icon to library
Change-Id: I9ae1ada630807cfa5fab25dded9b6f3f780768aa

--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -328,6 +328,11 @@
     content: $icon-left;
   }
 }
+.icon-line-chart {
+  &:before {
+    content: $icon-line-chart;
+  }
+}
 .icon-link {
   &:before {
     content: $icon-link;
