--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -61,6 +61,7 @@ $icon-image: "\69";
 $icon-info: "\49";
 $icon-key: "\4b";
 $icon-left: "\3c";
+$icon-line-chart: "\e92c";
 $icon-link: "\6b";
 $icon-linkedin: "\e92b";
 $icon-lock: "\42";
