UIP-2304 Stacked bar chart - Tooltip value incorrectly updated UIP-2303 Stacked bar chart - Tooltip on segment hover should disappear
Change-Id: Ie2d7a0a0f4f870c4115984ee02dc5975cc468c8e

--- a/packages/ui-library/src/css/layout/_dashboard-cards.scss
+++ b/packages/ui-library/src/css/layout/_dashboard-cards.scss
@@ -474,6 +474,12 @@ $fullwidthBreakpoint: 950px;
         transition: all 0.3s;
     }
 
+    .recharts-layer.recharts-bar {
+        .recharts-bar-rectangle:last-child {
+            opacity: 0.75;
+        }
+    }
+
     .dashboard-card__front {
         align-items: center;
     }
@@ -571,6 +577,14 @@ $fullwidthBreakpoint: 950px;
             content: '';
             display: block;
             border-bottom: 1px solid $color-neutral-90;
+        }
+    }
+
+    &__donut-chart.recharts-wrapper {
+        .recharts-tooltip-wrapper {
+
+            // Make tooltip transparent to mouse events
+            pointer-events: none;
         }
     }
 }
