--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -978,7 +978,7 @@ $color-grey-minor-1: $color-neutral-30;
         }
     }
     &.columns-margin-none,
-    &.columns-nopad {  // nopad DEPRICATED
+    &.columns-nopad {  // nopad DEPRECATED
         .content-column {
             margin: 0;
         }
