UIP-2234: Radio button highlight on focus
Change-Id: I4dfa69f977a14a914988bb98c1e8f3a686ab0266

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -16,6 +16,14 @@ $default-input-font-size: 14px;
 $borderSize: 1px !default;
 $default-input-border-radius: 2px;
 
+/*
+  This will hide the focus indicator if the element receives focus via the mouse,
+  but it will still show up on keyboard focus.
+*/
+.js-focus-visible :focus:not(.focus-visible) {
+    outline: none;
+}
+
 
 // CORE INPUT STYLES ---------------------------------------------------------------------------------------------------
 
