UIP-2272: Wired up Social Login state and added Image component
Change-Id: I131191e0b1482102126c0dc4220502dd95e2045b

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -1,6 +1,7 @@
 @import 'charting/chip-panel';
 @import 'charting/multiseries-chart';
 @import 'charting/dropdown-selector';
+@import 'general/image-component';
 @import 'layout/dashboard-cards';
 @import 'layout/charts';
 @import 'layout/hero-chart';
