UIP-1698 added z-index to the I18 phone input error message
Change-Id: I0f828bc0e4cb3a726e5f7648e36e1878812db69a

--- a/packages/ui-library/src/css/i18n.scss
+++ b/packages/ui-library/src/css/i18n.scss
@@ -125,6 +125,7 @@ $flagsImageExtension: 'png' !default;
         }
         .form-error-message {
             width: 100%;
+            z-index: $zindex__popover;
         }
     }
 }
