UIP-2341: I18Phone input arrow not clickable
Change-Id: Iff41df3696c5adfc296ca80391f0c6ff20f0afe0

--- a/packages/ui-library/src/css/i18n.scss
+++ b/packages/ui-library/src/css/i18n.scss
@@ -232,6 +232,7 @@ $flagsImageExtension: 'png' !default;
         }
         .arrow {
             position: absolute;
+            pointer-events: none;
             // split the difference between the flag and the arrow height to verically center
             top: 50%;
             margin-top: -1 * ($arrowHeight / 2);
