UIP-2308: dropdown poorly handles long values
Change-Id: I54a88942119fbfe1f2bf92fa505b22a4ff15a428

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -1757,6 +1757,8 @@ input[type=file] {
 
             .label-text {
                 text-transform: none;
+                word-break: break-word;
+                word-wrap: break-word;
             }
         }
     }
