UIP-2199 restyled Translation picker to the original designs(jeff) removed min height for this drop down link
Change-Id: I94563cfd6527a71d02f177bd79cdec5a267d42e7

--- a/packages/ui-library/src/css/forms/_translation-picker.scss
+++ b/packages/ui-library/src/css/forms/_translation-picker.scss
@@ -7,13 +7,20 @@
     .collapsible-link:after {
         color: $color-value-text !important;
     }
+    .collapsible-link.right:after {
+        right: -18px;
+    }
+    .details-content-inner {
+        min-height: unset;
+    }
 }
 
 .translation-picker__label {
     $width: 21px;
     font-size: 13px;
     text-align: center;
-    width: $width;
+    width: 15px;
+    padding-left: 3px;
     height: 1em;
     overflow: hidden;
     &:before {
