UIP-2342: Refactor demo site router
Change-Id: I4312419464a053a171a008936fe0c34a3bca2705

--- a/packages/ui-library/src/demo/index.ejs
+++ b/packages/ui-library/src/demo/index.ejs
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Ping Identity UI Component Library</title>
+    <title>Ping Identity UI Component Library</title>
+    <base href="/">
 
 	<link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/default.min.css">
