UIP-2120 : change line-height of input-row component (only) so that text and buttons align properly
Change-Id: Icdaf83c844712531177c2e7e83f3be9eb7590a62

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -411,11 +411,6 @@ label {
                 bottom: auto;
             }
         }
-        &.align-inputs {
-            .icon {
-                bottom: -8px;
-            }
-        }
     }
 
     &.input-radio {
@@ -2543,6 +2538,10 @@ input[type=file] {
                 bottom: 3px;
             }
         }
+    }
+
+    .input-row--line-height {
+        line-height: $default-input-height;
     }
 }
 
