UIP-2324 : Add new FileInput component
Change-Id: Ifcef74db3f0e2e651ab3a26041677aa1f67c11d0

--- a/packages/ui-library/src/css/mixins.scss
+++ b/packages/ui-library/src/css/mixins.scss
@@ -189,6 +189,12 @@
     }
 }
 
+@mixin break-word {
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+}
+
 
 // ANIMATION --------------------------------------------------------------------------------------
 
