--- a/packages/ui-library/src/css/text.scss
+++ b/packages/ui-library/src/css/text.scss
@@ -70,6 +70,11 @@
     &:last-child {
         margin-bottom: 0;
     }
+
+    &--inline {
+        display: inline-block;
+        margin: 0;
+    }
 }
 
 .textblock {
