UIP-2064 : create new message button component
Change-Id: Ie7254eea3004b2a604d66db7cab4f4543c1cb06b

--- a/packages/ui-library/src/css/buttons.scss
+++ b/packages/ui-library/src/css/buttons.scss
@@ -1,3 +1,5 @@
+@import 'message-button';
+@import 'ellipsis-loader-button';
 
 @mixin base-button-styles {
     @include text-style($color-slate, $font-size-primary);
@@ -373,35 +375,6 @@ button,
         text-transform: uppercase;
 
         border-radius: 3px;
-    }
-}
-
-button.ellipsis-loader-button {
-    .icon-ellipsis {
-        position: absolute;
-        top: 15px;
-        left: 50%;
-        margin: 0 0 0 -18px;
-        display: none;
-    }
-    &.loading {
-        color: transparent;
-        cursor: default;
-
-        .icon-ellipsis {
-            display: block;
-        }
-        &.primary {
-            &:hover {
-                background-color: $color-active-blue;
-                color: $color-active-blue;
-            }
-        }
-        &.inline {
-            .icon-ellipsis {
-                top: 9px;
-            }
-        }
     }
 }
 
