--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -4,6 +4,7 @@ $icomoon-font-family: "iconfont"; // KEEP - designates name of font
 $icon-account: "\61";
 $icon-admin-account: "\74";
 $icon-alert: "\21";
+$icon-alert-solid: "\e92d";
 $icon-approve: "\70";
 $icon-apps: "\6c";
 $icon-as: "\e904";
@@ -34,7 +35,7 @@ $icon-collapse: "\63";
 $icon-curly-braces: "\e921";
 $icon-delete: "\64";
 $icon-desktop: "\e916";
-$icon-details: "\e900";
+$icon-details: "\e902";
 $icon-device: "\e906";
 $icon-directory: "\3d";
 $icon-directory-hollow: "\23";
@@ -52,7 +53,7 @@ $icon-filter: "\66";
 $icon-fingerprint: "\e909";
 $icon-globe: "\a1";
 $icon-grip: "\47";
-$icon-group: "\e902";
+$icon-group: "\e907";
 $icon-help: "\68";
 $icon-help-rounded: "\48";
 $icon-help-solid: "\e91e";
@@ -106,7 +107,7 @@ $icon-progress-6-4: "\e1";
 $icon-progress-6-5: "\e2";
 $icon-progress-6-6: "\e3";
 $icon-puzzle: "\7a";
-$icon-radar: "\e907";
+$icon-radar: "\e90c";
 $icon-resend: "\72";
 $icon-resource: "\e922";
 $icon-right: "\3e";
@@ -123,14 +124,15 @@ $icon-spin-down: "\30";
 $icon-spin-up: "\31";
 $icon-spinner: "\50";
 $icon-success: "\79";
+$icon-success-round: "\e92e";
 $icon-support: "\71";
 $icon-tag: "\e91b";
-$icon-terminal: "\e90c";
-$icon-twitter: "\e92a";
+$icon-terminal: "\e924";
 $icon-thumb: "\54";
+$icon-twitter: "\e92a";
 $icon-undo: "\6e";
 $icon-user: "\75";
-$icon-user_directory: "\e924";
+$icon-user_directory: "\e928";
 $icon-users: "\55";
 $icon-view: "\56";
 $icon-view-hidden: "\2f";
