--- a/packages/ui-library/src/css/end-user/_device-table.scss
+++ b/packages/ui-library/src/css/end-user/_device-table.scss
@@ -1,5 +1,5 @@
 table.device-table {
-    border-spacing: 0;
+    margin-top: 30px;
     td {
         padding-top: $spacing-lg;
         padding-bottom: $spacing-lg;
@@ -10,10 +10,26 @@ table.device-table {
         border-bottom-style: solid;
         &:first-child {
             padding-left: $spacing-md;
+            width: 42%;
+        }
+        button.inline.delete {
+            margin: 0;
         }
     }
-    .device-icon {
-        margin-right: $spacing-sm;
+
+    .device {
+        &-icon {
+            margin-right: $spacing-sm;
+        }
+        &-name {
+            display: inline-block;
+            vertical-align: middle;
+            &__type {
+                display: none;
+                color: $color-neutral-30;
+                text-transform: uppercase;
+            }
+        }
     }
 }
 //based on Dock menu breakpoints
@@ -28,12 +44,26 @@ table.device-table {
             display: flex;
             align-items: stretch;
             border-bottom: 1px solid $color-rabbit-fur;
+            &:last-child {
+                border-bottom: none;
+            }
         }
         td {
             border-bottom: none;
             &:last-child {
                 margin-left: auto;
+                padding-right: 25px;
             }
+        }
+        th,
+        td {
+            &:nth-child(2) { //selector for type column
+                display: none;
+            }
+        }
+        .device-type {
+            display: block;
         }
     }
 }
+
