--- a/packages/ui-library/src/css/multivalues.scss
+++ b/packages/ui-library/src/css/multivalues.scss
@@ -111,10 +111,27 @@
             vertical-align: middle;
             padding: 0;
             max-width: 100%;
+            position: relative;
 
-            input {
-                width: 1em;
-                max-width: 100%;
+            &__hidden {
+                position: relative;
+                width: auto;
+                display: inline-block;
+                visibility: hidden;
+                z-index: -1;
+                padding-right: 20px;
+            }
+
+            &__wrapper {
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+            }
+
+            &__input {
+                width: 100%;
                 color: $color-input-text;
                 box-sizing: content-box;
                 background: none transparent;
