move new FileInput component into codevelopment / change name of worker-app icon to robot
Change-Id: Iced0d5a06e1b77945e55b143b3026098ffa99d55

--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -111,6 +111,7 @@ $icon-radar: "\e90c";
 $icon-resend: "\72";
 $icon-resource: "\e922";
 $icon-right: "\3e";
+$icon-robot: "\e926";
 $icon-search: "\73";
 $icon-server: "\80";
 $icon-settings: "\53";
@@ -139,4 +140,3 @@ $icon-view-hidden: "\2f";
 $icon-walkthrough: "\4d";
 $icon-wand: "\57";
 $icon-welcome: "\77";
-$icon-worker-app: "\e926";
