--- a/packages/ui-library/src/css/icons/_style.scss
+++ b/packages/ui-library/src/css/icons/_style.scss
@@ -3,10 +3,10 @@
 @font-face {
   font-family: '#{$icomoon-font-family}';
   src:
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff2?b7hu6b') format('woff2'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?b7hu6b') format('truetype'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?b7hu6b') format('woff'),
-    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?b7hu6b##{$icomoon-font-family}') format('svg');
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff2?5dhexm') format('woff2'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.ttf?5dhexm') format('truetype'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.woff?5dhexm') format('woff'),
+    url('#{$icomoon-font-path}/#{$icomoon-font-family}.svg?5dhexm##{$icomoon-font-family}') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -578,6 +578,11 @@
     content: $icon-right;
   }
 }
+.icon-robot {
+  &:before {
+    content: $icon-robot;
+  }
+}
 .icon-search {
   &:before {
     content: $icon-search;
@@ -716,10 +721,5 @@
 .icon-welcome {
   &:before {
     content: $icon-welcome;
-  }
-}
-.icon-worker-app {
-  &:before {
-    content: $icon-worker-app;
   }
 }
