--- a/packages/ui-library/src/css/general/_page-header.scss
+++ b/packages/ui-library/src/css/general/_page-header.scss
@@ -46,7 +46,7 @@
     font-size: 24px;
     @include font-pn-regular;
     color: $color-slate;
-    word-wrap: break-word;
+    @include break-word;
     line-height: 1.2em;
 
     margin-right: $spacing-sm;
