UIP-2415 Custom Branding Template
Change-Id: I7ae6c86f037b1252e44d336e28f2b4eb3b24a446

--- a/packages/ui-library/src/css/inputs.scss
+++ b/packages/ui-library/src/css/inputs.scss
@@ -3162,3 +3162,11 @@ label.input-text--right-icon {
         }
     }
 }
+
+.sub-text {
+    position: absolute;
+    right: 0;
+    font-size: 10px;
+    text-transform: lowercase;
+}
+
