UIP-2354: Fixed issue where ListViewInfiniteScroll didn't show up correctly in IE11
Change-Id: Ia45e99204f411f8ccd57ef3ac7c8aa9825f8b43f

--- a/packages/ui-library/src/css/layout.scss
+++ b/packages/ui-library/src/css/layout.scss
@@ -977,6 +977,10 @@ $color-grey-minor-1: $color-neutral-30;
         &:last-of-type {
             margin: 0;
         }
+
+        &--ie11 {
+            flex: 1 1 auto;
+        }
     }
     &.columns-margin-none,
     &.columns-nopad {  // nopad DEPRECATED
