UIP-2406: Integrate the MessageButton into FileInput
Change-Id: I03164f7f0e33fa140bd68f5b5764710d22f3ec6f

--- a/packages/ui-library/src/css/message-button.scss
+++ b/packages/ui-library/src/css/message-button.scss
@@ -21,7 +21,7 @@ button.message-button {
         color: $color-white;
 
         .icon-ellipsis {
-            margin-left: $spacing-md;
+            margin: 0 $spacing-md;
 
             &:before,
             &:after,
